fastmetrics-derive/tests/ui/fail/label_index_mapping/skip_field_without_default.rs
use fastmetrics_derive::{LabelIndexMapping, LabelSetSchema};

struct NoDefault;

#[derive(LabelSetSchema, LabelIndexMapping)]
struct Labels {
    #[label(skip)]
    skipped: NoDefault,
}

fn main() {}
